--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,10 @@
     "tests"
   ],
   "dependencies": {
-    "angular-material": "master"
+    "ng-polymer-elements": "~0.2.0",
+    "angular-material": "~0.6.1",
+    "polymer": "Polymer/polymer#~0.5.2",
+    "core-elements": "Polymer/core-elements#~0.5.2",
+    "paper-elements": "Polymer/paper-elements#~0.5.2"
   }
 }
