--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "material",
   "version": "1.0.0",
-  "description": "Angular Material Design Test",
+  "description": "Angular Material Design in Action",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Daniel Zen",
-  "license": "ISC"
+  "license": "MIT"
 }
